# zero-knowledge-dip

./: .gitignore  Cargo.toml  LICENSE  README.md  start.bat  stop.bat  test.bat
crates/blind-token-service/: Cargo.toml
crates/blind-token-service/migrations/: 20240101000000_create_subscriptions.sql
crates/blind-token-service/src/: config.rs  error.rs  handlers.rs  main.rs  models.rs  state.rs
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/client/src/commands/: assign.rs  mod.rs  test.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: blind_signature.rs  ecdh.rs  encryption.rs  error.rs  jwt.rs  lib.rs  types.rs
crates/dip-service/: Cargo.toml
crates/dip-service/migrations/: 20240101000001_create_ip_pool.sql  20240102000002_create_assignments.sql
crates/dip-service/src/: config.rs  error.rs  handlers.rs  main.rs  models.rs  state.rs
crates/enclave-sim/: Cargo.toml
crates/enclave-sim/src/: attestation.rs  config.rs  error.rs  handlers.rs  main.rs  state.rs
crates/vpn-server/: Cargo.toml
crates/vpn-server/src/: config.rs  main.rs  server.rs  validator.rs
docs/: index.html
docs/research/: ZK-DIP-Research-Paper.txt
