[package]
name = "zkdip-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
rsa = "0.9"
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
sha2 = "0.10"
jsonwebtoken = "9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
base64 = "0.21"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }