[package]
name = "enclave-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
zkdip-crypto = { path = "../crypto" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"
dotenvy = "0.15"