[package]
name = "vpn-server"
version = "0.1.0"
edition = "2021"

[dependencies]
zkdip-crypto = { path = "../crypto" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
dotenvy = "0.15"
base64 = "0.21"
hex = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
aes-gcm = "0.10"
